--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AKARI master catalogue: Flags"
+    "# AKARI-NEP master catalogue: Flags"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "irac_mag = 3.9000000001085695\n",
-    "bands = [\"IRAC i1\", \"IRAC i2\",]\n",
+    "bands = [\"IRAC i1\", \"IRAC i2\", \"IRAC i3\", \"IRAC i4\"]\n",
     "\n",
     "for i, band in enumerate(bands):\n",
     "    print(band)\n",
@@ -217,7 +217,7 @@
    },
    "outputs": [],
    "source": [
-    "for band_of_a_kind in [all_bands]:\n",
+    "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
     "\n",
     "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
