Bug fix on COSMOS
#2

--- a/dmu1/dmu1_ml_COSMOS/1.3_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.3_DECaLS.ipynb
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -615,15 +617,15 @@
    "outputs": [],
    "source": [
     "# Aperture correction\n",
-    "mag_corr['z'] = np.nan\n",
-    "#mag_corr['z'], num, std = aperture_correction(\n",
-    "#    magnitudes['z'][4], magnitudes['z'][5], \n",
-    "#    stellarities['z'],\n",
-    "#    mag_min=16.0, mag_max=17.5)\n",
-    "#print(\"Aperture correction for z band:\")\n",
-    "#print(\"Correction: {}\".format(mag_corr['z']))\n",
-    "#print(\"Number of source used: {}\".format(num))\n",
-    "#print(\"RMS: {}\".format(std))"
+    "#mag_corr['z'] = np.nan\n",
+    "mag_corr['z'], num, std = aperture_correction(\n",
+    "    magnitudes['z'][4], magnitudes['z'][5], \n",
+    "    stellarities['z'],\n",
+    "    mag_min=16.0, mag_max=17.5)\n",
+    "print(\"Aperture correction for z band:\")\n",
+    "print(\"Correction: {}\".format(mag_corr['z']))\n",
+    "print(\"Number of source used: {}\".format(num))\n",
+    "print(\"RMS: {}\".format(std))"
    ]
   },
   {
