New CFHT-Wirds processing on COSMOS

--- a/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
@@ -823,7 +823,7 @@
    "source": [
     "## VI - Choosing between multiple values for the same filter\n",
     "\n",
-    "There are currently no overlapping surveys here."
+    "### VI.a HSC-DEEP and HSC-UDEEP"
    ]
   },
   {
@@ -1070,6 +1070,166 @@
    "outputs": [],
    "source": [
     "suprime_origin.write(\"{}/cosmos_suprime_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VII.b CFHT-WIRDS vs CFHTLS\n",
+    "\n",
+    "We take CFHTLS over CFHT-WIRDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "megacam_origin = Table()\n",
+    "megacam_origin.add_column(master_catalogue['help_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "megacam_stats = Table()\n",
+    "megacam_stats.add_column(Column(data=['u','g','r','i','z'], name=\"Band\"))\n",
+    "for col in [\"CFHTLS\",  \"CFHT-WIRDS\"]:\n",
+    "    megacam_stats.add_column(Column(data=np.full(5, 0), name=\"{}\".format(col)))\n",
+    "    megacam_stats.add_column(Column(data=np.full(5, 0), name=\"use {}\".format(col)))\n",
+    "    megacam_stats.add_column(Column(data=np.full(5, 0), name=\"{} ap\".format(col)))\n",
+    "    megacam_stats.add_column(Column(data=np.full(5, 0), name=\"use {} ap\".format(col)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "megacam_bands = ['u','g','r','i','z'] \n",
+    "for band in megacam_bands:\n",
+    "\n",
+    "    # megacam total flux \n",
+    "    has_cfhtls = ~np.isnan(master_catalogue['f_megacam_' + band])\n",
+    "    has_wirds  = ~np.isnan(master_catalogue['f_wirds_' + band])\n",
+    "    \n",
+    "\n",
+    "    use_cfhtls = has_cfhtls\n",
+    "    use_wirds = has_wirds & ~has_cfhtls\n",
+    " \n",
+    "    master_catalogue['f_megacam_' + band][use_wirds] = master_catalogue['f_wirds_' + band][use_wirds]\n",
+    "    master_catalogue['ferr_megacam_' + band][use_wirds] = master_catalogue['ferr_wirds_' + band][use_wirds]\n",
+    "    master_catalogue['m_megacam_' + band][use_wirds] = master_catalogue['m_wirds_' + band][use_wirds]\n",
+    "    master_catalogue['merr_megacam_' + band][use_wirds] = master_catalogue['merr_wirds_' + band][use_wirds]\n",
+    "    master_catalogue['flag_megacam_' + band][use_wirds] = master_catalogue['flag_wirds_' + band][use_wirds]\n",
+    " \n",
+    "\n",
+    "\n",
+    "    master_catalogue.remove_columns(['f_wirds_' + band,\n",
+    "                               'ferr_wirds_' + band,\n",
+    "                               'm_wirds_' + band, \n",
+    "                               'merr_wirds_' + band,\n",
+    "                               'flag_wirds_' + band])\n",
+    "\n",
+    "    origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
+    "    origin[use_cfhtls] = \"CFHTLS\"\n",
+    "    origin[use_wirds] = \"CFHT-WIRDS\"\n",
+    " \n",
+    "    \n",
+    "    megacam_origin.add_column(Column(data=origin, name= 'f_megacam_' + band ))\n",
+    "    \n",
+    "  \n",
+    "    # Megacam aperture flux \n",
+    "    has_ap_cfhtls = ~np.isnan(master_catalogue['f_ap_megacam_' + band])\n",
+    "    has_ap_wirds  = ~np.isnan(master_catalogue['f_ap_wirds_' + band])\n",
+    " \n",
+    "    \n",
+    "\n",
+    "    use_ap_cfhtls = has_ap_cfhtls\n",
+    "    use_ap_wirds = has_ap_wirds & ~has_ap_cfhtls\n",
+    "  \n",
+    "\n",
+    "    master_catalogue['f_ap_megacam_' + band][use_ap_wirds] = master_catalogue['f_ap_wirds_' + band][use_ap_wirds]\n",
+    "    master_catalogue['ferr_ap_megacam_' + band][use_ap_wirds] = master_catalogue['ferr_ap_wirds_' + band][use_ap_wirds]\n",
+    "    master_catalogue['m_ap_megacam_' + band][use_ap_wirds] = master_catalogue['m_ap_wirds_' + band][use_ap_wirds]\n",
+    "    master_catalogue['merr_ap_megacam_' + band][use_ap_wirds] = master_catalogue['merr_ap_wirds_' + band][use_ap_wirds]\n",
+    "\n",
+    "    master_catalogue.remove_columns(['f_ap_wirds_' + band,\n",
+    "                               'ferr_ap_wirds_' + band,\n",
+    "                               'm_ap_wirds_' + band, \n",
+    "                               'merr_ap_wirds_' + band,\n",
+    "                               'flag_ap_wirds_' + band])\n",
+    "\n",
+    "    origin_ap = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
+    "    origin_ap[use_ap_cfhtls] = \"CFHTLS\"\n",
+    "    origin_ap[use_ap_wirds] = \"CFHT-WIRDS\"\n",
+    "\n",
+    "    \n",
+    "    megacam_origin.add_column(Column(data=origin_ap, name= 'f_ap_megacam_' + band ))\n",
+    "\n",
+    "   \n",
+    "    megacam_stats['CFHTLS'][megacam_stats['Band'] == band] = np.sum(has_cfhtls)\n",
+    "    megacam_stats['CFHT-WIRDS'][megacam_stats['Band'] == band] = np.sum(has_wirds)\n",
+    "\n",
+    "    megacam_stats['use CFHTLS'][megacam_stats['Band'] == band] = np.sum(use_cfhtls)\n",
+    "    megacam_stats['use CFHT-WIRDS'][megacam_stats['Band'] == band] = np.sum(use_wirds)\n",
+    "\n",
+    "    megacam_stats['CFHTLS ap'][megacam_stats['Band'] == band] = np.sum(has_ap_cfhtls)\n",
+    "    megacam_stats['CFHT-WIRDS ap'][megacam_stats['Band'] == band] = np.sum(has_ap_wirds)\n",
+    "\n",
+    "    megacam_stats['use CFHTLS ap'][megacam_stats['Band'] == band] = np.sum(use_ap_cfhtls)\n",
+    "    megacam_stats['use CFHT-WIRDS ap'][megacam_stats['Band'] == band] = np.sum(use_ap_wirds)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "megacam_stats.show_in_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "megacam_origin.write(\"{}/cosmos_megacam_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in master_catalogue.colnames:\n",
+    "    if '_wirds_j' in col:\n",
+    "        master_catalogue.rename_column(col, col.replace('_wirds_j', '_wircam_j'))\n",
+    "    if '_wirds_h' in col:\n",
+    "        master_catalogue.rename_column(col, col.replace('_wirds_h', '_wircam_h'))\n",
+    "    if '_wirds_k' in col:\n",
+    "        master_catalogue.rename_column(col, col.replace('_wirds_k', '_wircam_ks'))"
    ]
   },
   {
