Bug fix on HDF-N
#21

--- a/dmu1/dmu1_ml_HDF-N/1.4_Ultradeep-Ks-GOODS-N.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/1.4_Ultradeep-Ks-GOODS-N.ipynb
@@ -39,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -140,7 +142,7 @@
     "        catalogue[errcol][np.isclose(catalogue[errcol], 0.0)] = np.nan\n",
     "        \n",
     "        #Calculate mags, errors \n",
-    "        mag, error = flux_to_mag(np.array(catalogue[col]), np.array(catalogue[errcol] ))\n",
+    "        mag, error = flux_to_mag(np.array(catalogue[col])*1.e-6, np.array(catalogue[errcol] )*1.e-6)\n",
     "          \n",
     "        # magnitudes are added\n",
     "        catalogue.add_column(Column(mag, name=\"m{}\".format(col[1:])))\n",
