Some work on COSMOS comparison

--- a/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
@@ -98,7 +98,9 @@
     "kids = Table.read(\"{}/KIDS.fits\".format(TMP_DIR))\n",
     "ps1 = Table.read(\"{}/PS1.fits\".format(TMP_DIR))\n",
     "las = Table.read(\"{}/UKIDSS-LAS.fits\".format(TMP_DIR))\n",
-    "wirds = Table.read(\"{}/CFHT-WIRDS.fits\".format(TMP_DIR))\n"
+    "wirds = Table.read(\"{}/CFHT-WIRDS.fits\".format(TMP_DIR))\n",
+    "\n",
+    "cosmos2015 = Table.read(\"{}/COSMOS2015_HELP.fits\".format(TMP_DIR))['cosmos_id', 'cosmos_ra', 'cosmos_dec']"
    ]
   },
   {
@@ -482,6 +484,39 @@
    "source": [
     "#Given the graph above, we use 1 arc-second radius\n",
     "master_catalogue = merge_catalogues(master_catalogue, wirds, \"wirds_ra\", \"wirds_dec\", radius=1.*u.arcsec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add COSMOS2015"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(cosmos2015['cosmos_ra'], cosmos['cosmos_dec'])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Given the graph above, we use 1 arc-second radius\n",
+    "master_catalogue = merge_catalogues(master_catalogue, cosmos2015, \"cosmos_ra\", \"cosmos_dec\", radius=1.*u.arcsec)"
    ]
   },
   {
@@ -1589,7 +1624,7 @@
    },
    "outputs": [],
    "source": [
-    "columns = [\"help_id\", \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
+    "columns = [\"help_id\", \"cosmos_id\" \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
     "\n",
     "bands = [column[5:] for column in master_catalogue.colnames if 'f_ap' in column]\n",
     "for band in bands:\n",
