--- a/dmu32/dmu32_GAMA-15/GAMA-15_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-15/GAMA-15_catalogue_merging.ipynb
@@ -195,13 +195,13 @@
    "source": [
     "# Photo-z\n",
     "\n",
-    "#photoz = Table.read(\"../../dmu24/dmu24_/data/\")\n",
-    "#photoz.meta = None\n",
+    "photoz = Table.read(\"../../dmu24/dmu24_GAMA-15/data/master_catalogue_gama-15_20180119_photoz_20180210_r_optimised.fits\")\n",
+    "photoz.meta = None\n",
     "\n",
-    "#photoz = photoz['help_id', 'z1_median']\n",
-    "#photoz['z1_median'].name = 'redshift'\n",
+    "photoz = photoz['help_id', 'z1_median']\n",
+    "photoz['z1_median'].name = 'redshift'\n",
     "\n",
-    "#photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -214,9 +214,9 @@
    "source": [
     "# Temp spec-z\n",
     "\n",
-    "ml['zspec'].name = 'redshift'\n",
+    "#ml['zspec'].name = 'redshift'\n",
     "\n",
-    "ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -291,22 +291,12 @@
    },
    "outputs": [],
    "source": [
-    "#merged_table = join(merged_table, photoz, join_type='left')\n",
+    "merged_table = ml\n",
+    "merged_table = join(merged_table, photoz, join_type='left')\n",
     "\n",
     "# Fill values\n",
-    "#merged_table['redshift'].fill_value = np.nan\n",
-    "#merged_table = merged_table.filled()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mergel_table = ml"
+    "merged_table['redshift'].fill_value = np.nan\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -346,7 +336,7 @@
     "    \n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    # assert set(columns) == set(merged_table.colnames)\n",
+    "    assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
     "    merged_table.write(\"data/GAMA-15_{}_cigale.fits\".format(SUFFIX))"
