Bug fixing on ELAIS-S1 and GAMA-15

--- a/dmu1/dmu1_ml_ELAIS-S1/1.4_SWIRE.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/1.4_SWIRE.ipynb
@@ -46,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -109,22 +111,22 @@
     "        'uncf_ap2_36': \"ferr_ap_swire_irac1\",\n",
     "        'flux_kr_36': \"f_swire_irac1\",\n",
     "        'uncf_kr_36': \"ferr_swire_irac1\",\n",
-    "        'stell_36': \"swire_stellarity_irac1\",\n",
+    "        'stell_36': \"swire_stellarity_irac_i1\",\n",
     "        'flux_ap2_45': \"f_ap_swire_irac2\",\n",
     "        'uncf_ap2_45': \"ferr_ap_swire_irac2\",\n",
     "        'flux_kr_45': \"f_swire_irac2\",\n",
     "        'uncf_kr_45': \"ferr_swire_irac2\",\n",
-    "        'stell_45': \"swire_stellarity_irac2\",\n",
-    "        'flux_ap2_58': \"f_ap_irac3\",\n",
-    "        'uncf_ap2_58': \"ferr_ap_irac3\",\n",
-    "        'flux_kr_58': \"f_irac3\",\n",
-    "        'uncf_kr_58': \"ferr_irac3\",\n",
-    "        'stell_58': \"swire_stellarity_irac3\",\n",
-    "        'flux_ap2_80': \"f_ap_irac4\",\n",
-    "        'uncf_ap2_80': \"ferr_ap_irac4\",\n",
-    "        'flux_kr_80': \"f_irac4\",\n",
-    "        'uncf_kr_80': \"ferr_irac4\",\n",
-    "        'stell_80': \"swire_stellarity_irac4\",\n",
+    "        'stell_45': \"swire_stellarity_irac_i2\",\n",
+    "        'flux_ap2_58': \"f_ap_irac_i3\",\n",
+    "        'uncf_ap2_58': \"ferr_ap_irac_i3\",\n",
+    "        'flux_kr_58': \"f_irac_i3\",\n",
+    "        'uncf_kr_58': \"ferr_irac_i3\",\n",
+    "        'stell_58': \"swire_stellarity_irac_i3\",\n",
+    "        'flux_ap2_80': \"f_ap_irac_i4\",\n",
+    "        'uncf_ap2_80': \"ferr_ap_irac_i4\",\n",
+    "        'flux_kr_80': \"f_irac_i4\",\n",
+    "        'uncf_kr_80': \"ferr_irac_i4\",\n",
+    "        'stell_80': \"swire_stellarity_irac_i4\",\n",
     "    })\n",
     "\n",
     "\n",
@@ -266,7 +268,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['ferr_ap_swire_irac1', 'ferr_ap_swire_irac2', 'ferr_ap_irac3', 'ferr_ap_irac4']\n",
+    "SORT_COLS = ['ferr_ap_swire_irac1', 'ferr_ap_swire_irac2', 'ferr_ap_irac_i3', 'ferr_ap_irac_i4']\n",
     "FLAG_NAME = \"swire_flag_cleaned\"\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
