--- a/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
@@ -837,10 +837,10 @@
     "merr_ap_irac[use_servs] = master_catalogue['merr_ap_servs_irac1'][use_servs]\n",
     "merr_ap_irac[use_swire] = master_catalogue['merr_ap_swire_irac1'][use_swire]\n",
     "\n",
-    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_ap_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_ap_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_ap_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_ap_irac1\"))\n",
+    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_ap_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_ap_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_ap_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_ap_irac_i1\"))\n",
     "\n",
     "master_catalogue.remove_columns(['f_ap_servs_irac1', 'f_ap_swire_irac1', 'ferr_ap_servs_irac1',\n",
     "                                     'ferr_ap_swire_irac1', 'm_ap_servs_irac1', 'm_ap_swire_irac1',\n",
@@ -910,11 +910,11 @@
     "merr_ap_irac[use_servs] = master_catalogue['merr_servs_irac1'][use_servs]\n",
     "merr_ap_irac[use_swire] = master_catalogue['merr_swire_irac1'][use_swire]\n",
     "\n",
-    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_irac1\"))\n",
-    "master_catalogue.add_column(Column(data=flag_irac, name=\"flag_irac1\"))\n",
+    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_irac_i1\"))\n",
+    "master_catalogue.add_column(Column(data=flag_irac, name=\"flag_irac_i1\"))\n",
     "\n",
     "master_catalogue.remove_columns(['f_servs_irac1', 'f_swire_irac1', 'ferr_servs_irac1',\n",
     "                                 'ferr_swire_irac1', 'm_servs_irac1', 'flag_servs_irac1', 'm_swire_irac1',\n",
@@ -980,10 +980,10 @@
     "merr_ap_irac[use_servs] = master_catalogue['merr_ap_servs_irac2'][use_servs]\n",
     "merr_ap_irac[use_swire] = master_catalogue['merr_ap_swire_irac2'][use_swire]\n",
     "\n",
-    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_ap_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_ap_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_ap_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_ap_irac2\"))\n",
+    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_ap_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_ap_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_ap_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_ap_irac_i2\"))\n",
     "\n",
     "master_catalogue.remove_columns(['f_ap_servs_irac2', 'f_ap_swire_irac2', 'ferr_ap_servs_irac2',\n",
     "                                 'ferr_ap_swire_irac2', 'm_ap_servs_irac2', 'm_ap_swire_irac2',\n",
@@ -1053,11 +1053,11 @@
     "merr_ap_irac[use_servs] = master_catalogue['merr_servs_irac2'][use_servs]\n",
     "merr_ap_irac[use_swire] = master_catalogue['merr_swire_irac2'][use_swire]\n",
     "\n",
-    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_irac2\"))\n",
-    "master_catalogue.add_column(Column(data=flag_irac, name=\"flag_irac2\"))\n",
+    "master_catalogue.add_column(Column(data=f_ap_irac, name=\"f_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=ferr_ap_irac, name=\"ferr_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=m_ap_irac, name=\"m_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=merr_ap_irac, name=\"merr_irac_i2\"))\n",
+    "master_catalogue.add_column(Column(data=flag_irac, name=\"flag_irac_i2\"))\n",
     "\n",
     "master_catalogue.remove_columns(['f_servs_irac2', 'f_swire_irac2', 'ferr_servs_irac2',\n",
     "                                 'ferr_swire_irac2', 'm_servs_irac2', 'flag_servs_irac2', 'm_swire_irac2',\n",
@@ -1336,6 +1336,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in master_catalogue.colnames:\n",
+    "    if 'vista_k' in col:\n",
+    "        master_catalogue[col].name = col.replace('vista_k', 'vista_ks')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1451,15 +1464,15 @@
     "\n",
     "nb_nir_flux = (\n",
     "    1 * ~np.isnan(master_catalogue['f_vista_j']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vista_k']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vista_k']) \n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_h']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_ks']) \n",
     ")\n",
     "\n",
     "nb_mir_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_irac1']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_irac2']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_irac3']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_irac4'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i1']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i2']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i3']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i4'])\n",
     ")"
    ]
   },
@@ -1519,7 +1532,7 @@
    "source": [
     "\n",
     "master_catalogue[id_names].write(\n",
-    "    \"{}/master_list_cross_ident_egs{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
+    "    \"{}/master_list_cross_ident_elais-s1{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
     "id_names.remove('help_id')\n",
     "master_catalogue.remove_columns(id_names)"
    ]
