--- a/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
@@ -718,8 +718,8 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_voice_b99'] - master_catalogue['m_voice_r'],\n",
-    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'],\n",
-    "    \"b99 - r (VOICE)\", \"J - K (VISTA)\",\n",
+    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_ks'],\n",
+    "    \"b99 - r (VOICE)\", \"J - Ks (VISTA)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -749,7 +749,7 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_voice_r'] - master_catalogue['m_irac1'],\n",
+    "    master_catalogue['m_voice_r'] - master_catalogue['m_irac_i1'],\n",
     "    master_catalogue['m_voice_b99'] - master_catalogue['m_voice_v'],\n",
     "    \"VOICE r - IRAC1\", \"b99 - v (VOICE)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
@@ -781,7 +781,7 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'],\n",
+    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_ks'],\n",
     "    master_catalogue['m_vista_h'] - master_catalogue['m_vista_y'],\n",
     "    \"J - Ks (VHS)\", \"H - Y (VIDEO)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
