--- a/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
@@ -674,6 +674,8 @@
     "    master_catalogue['flag_kids_' + band].name = 'flag_omegacam_' + band    \n",
     "\n",
     "for band in ['z','y','j','h','k']:\n",
+    "    if band == 'k':\n",
+    "        band = 'ks'\n",
     "    master_catalogue['f_ap_viking_' + band].name = 'f_ap_vista_' + band\n",
     "    master_catalogue['ferr_ap_viking_' + band].name = 'ferr_ap_vista_' + band\n",
     "    master_catalogue['m_ap_viking_' + band].name = 'm_ap_vista_' + band\n",
@@ -819,7 +821,7 @@
     "    1 * ~np.isnan(master_catalogue['f_vista_y']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_vista_h']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_vista_j']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vista_k'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_ks'])\n",
     ")\n",
     "\n",
     "nb_mir_flux = np.zeros(len(master_catalogue), dtype=bool)"
