--- a/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,8 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180129_cigale.fits\")"
+    "SUFFIX = ''\n",
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_Lockman-SWIRE/data/Lockman-SWIRE_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
   {
