--- a/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,8 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180129_cigale.fits\")"
+    "SUFFIX = '20180129'\n",
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_GAMA-15/data/GAMA-15_{}_cigale.fits.fits\".format(SUFFIX))"
    ]
   },
   {
@@ -67,12 +68,12 @@
    },
    "outputs": [],
    "source": [
-    "good = {}\n",
-    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
-    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "# good = {}\n",
+    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
+    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -90,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -101,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -119,7 +120,8 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
+    "#best_catalogue = master_catalogue[combined_good].copy()\n",
+    "best_catalogue = master_catalogue.copy()"
    ]
   },
   {
@@ -164,12 +166,12 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [          \"OmegaCAM u\"]\n",
-    "g_bands = [\"GPC1 g\", \"OmegaCAM g\"]\n",
-    "r_bands = [\"GPC1 r\", \"OmegaCAM r\"]\n",
-    "i_bands = [\"GPC1 i\", \"OmegaCAM i\"]\n",
-    "z_bands = [\"VISTA z\", \"OmegaCAM z\", \"GPC1 z\",]\n",
-    "y_bands = [\"VISTA y\"  \"GPC1 y\", ]\n",
+    "u_bands = [             \"omegacam_u\"]\n",
+    "g_bands = [\"suprime_g\", \"omegacam_g\", \"decam_g\", \"gpc1_g\"]\n",
+    "r_bands = [\"suprime_r\", \"omegacam_r\", \"decam_r\", \"gpc1_r\"]\n",
+    "i_bands = [\"suprime_i\", \"omegacam_i\",            \"gpc1_i\"]\n",
+    "z_bands = [\"suprime_z\",               \"decam_z\", \"gpc1_z\"]\n",
+    "y_bands = [\"suprime_y\",                          \"gpc1_y\"]\n",
     "\n",
     "def remove_unneeded_fluxes(list_of_bands):\n",
     "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
@@ -203,7 +205,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/GAMA-15_cigale_best_extcor_{}.fits\".format(SUFFIX))"
    ]
   },
   {
@@ -232,8 +234,8 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
+    "best_catalogue.remove_column(\"redshift\")\n",
+    "best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
@@ -307,7 +309,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/GAMA-15_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX))"
    ]
   }
  ],
