Implement final VIDEO mask based on Boris Haeussler email

--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VISTA-VIDEO.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VISTA-VIDEO.ipynb
@@ -262,8 +262,9 @@
     "    \n",
     "    # Total fluxes and magnitudes\n",
     "    mask = catalogue[\"m_{}\".format(band)] > 90.\n",
-    "    mask &= catalogue[\"merr_{}\".format(band)] > 90.\n",
-    "    mask &= catalogue[\"f_{}\".format(band)] < 0.\n",
+    "    mask |= catalogue[\"merr_{}\".format(band)] > 90.\n",
+    "    #mask |= catalogue[\"f_{}\".format(band)] < 0.\n",
+    "    mask |= np.isclose(catalogue[\"ferr_{}\".format(band)] , 0.)\n",
     "    catalogue[\"m_{}\".format(band)][mask] = np.nan\n",
     "    catalogue[\"merr_{}\".format(band)][mask] = np.nan\n",
     "    catalogue[\"f_{}\".format(band)][mask] = np.nan\n",
@@ -271,8 +272,9 @@
     "    \n",
     "    # Aperture fluxes and magnitudes\n",
     "    mask = catalogue[\"m_ap_{}\".format(band)] > 90.\n",
-    "    mask &= catalogue[\"merr_ap_{}\".format(band)] > 90.\n",
-    "    mask &= catalogue[\"f_ap_{}\".format(band)] < 0.\n",
+    "    mask |= catalogue[\"merr_ap_{}\".format(band)] > 90.\n",
+    "    #mask |= catalogue[\"f_ap_{}\".format(band)] < 0.\n",
+    "    mask |= np.isclose(catalogue[\"ferr_ap_{}\".format(band)] , 0.)\n",
     "    catalogue[\"m_ap_{}\".format(band)][mask] = np.nan\n",
     "    catalogue[\"merr_ap_{}\".format(band)][mask] = np.nan\n",
     "    catalogue[\"f_ap_{}\".format(band)][mask] = np.nan\n",
