--- a/dmu1/dmu1_ml_XMM-LSS/1.17_VISTA-VIDEO.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.17_VISTA-VIDEO.ipynb
@@ -49,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -226,11 +228,51 @@
     "        #video.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
     "        #video.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
     "        \n",
-    "        # Band-flag column\n",
-    "        if \"ap\" not in col:\n",
-    "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
     "        \n",
     "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Correct wrong values.\n",
+    "# The catalogue contains negative fluxes and 99 in the associated magnitude. These\n",
+    "# values may be considered as upper limits but we don't want this information in the\n",
+    "# master list.  Also, some sources may have a very low signal to noise with the error\n",
+    "# on magnitude superior to 99.  In all these cases, we set the magnitude, the flux, and\n",
+    "# the associated errors to NaN.\n",
+    "\n",
+    "band_names = [_[8:] for _ in catalogue.colnames if _.startswith(\"merr_ap_\")]\n",
+    "\n",
+    "for band in band_names:\n",
+    "    \n",
+    "    # Total fluxes and magnitudes\n",
+    "    mask = catalogue[\"m_{}\".format(band)] > 90.\n",
+    "    mask |= catalogue[\"merr_{}\".format(band)] > 90.\n",
+    "    #mask |= catalogue[\"f_{}\".format(band)] < 0.\n",
+    "    mask |= np.isclose(catalogue[\"ferr_{}\".format(band)] , 0.)\n",
+    "    catalogue[\"m_{}\".format(band)][mask] = np.nan\n",
+    "    catalogue[\"merr_{}\".format(band)][mask] = np.nan\n",
+    "    catalogue[\"f_{}\".format(band)][mask] = np.nan\n",
+    "    catalogue[\"ferr_{}\".format(band)][mask] = np.nan\n",
+    "    \n",
+    "    # Aperture fluxes and magnitudes\n",
+    "    mask = catalogue[\"m_ap_{}\".format(band)] > 90.\n",
+    "    mask |= catalogue[\"merr_ap_{}\".format(band)] > 90.\n",
+    "    #mask |= catalogue[\"f_ap_{}\".format(band)] < 0.\n",
+    "    mask |= np.isclose(catalogue[\"ferr_ap_{}\".format(band)] , 0.)\n",
+    "    catalogue[\"m_ap_{}\".format(band)][mask] = np.nan\n",
+    "    catalogue[\"merr_ap_{}\".format(band)][mask] = np.nan\n",
+    "    catalogue[\"f_ap_{}\".format(band)][mask] = np.nan\n",
+    "    catalogue[\"ferr_ap_{}\".format(band)][mask] = np.nan\n",
+    "    \n",
+    "    # Adding the band-flag column\n",
+    "    catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag_{}\".format(band)))\n"
    ]
   },
   {
