More bugs in VIDEO

--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VISTA-VIDEO.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VISTA-VIDEO.ipynb
@@ -151,42 +151,42 @@
     "        'Z_MAGERR_APER_3': 'merr_ap_video_z', \n",
     "        'Z_MAG_AUTO':      'm_video_z', \n",
     "        'Z_MAGERR_AUTO':   'merr_video_z',\n",
-    "        #'Z_FLUX_APER_3':   'f_ap_video_z', \n",
-    "        #'Z_FLUXERR_APER_3':'ferr_ap_video_z', \n",
-    "        #'Z_FLUX_AUTO':     'f_video_z', \n",
-    "        #'Z_FLUXERR_AUTO':  'ferr_video_z',\n",
+    "        'Z_FLUX_APER_3':   'f_ap_video_z', \n",
+    "        'Z_FLUXERR_APER_3':'ferr_ap_video_z', \n",
+    "        'Z_FLUX_AUTO':     'f_video_z', \n",
+    "        'Z_FLUXERR_AUTO':  'ferr_video_z',\n",
     "        'Y_MAG_APER_3':    'm_ap_video_y', \n",
     "        'Y_MAGERR_APER_3': 'merr_ap_video_y', \n",
     "        'Y_MAG_AUTO':      'm_video_y', \n",
     "        'Y_MAGERR_AUTO':   'merr_video_y',\n",
-    "        #'Y_FLUX_APER_3':   'f_ap_video_y', \n",
-    "        #'Y_FLUXERR_APER_3':'ferr_ap_video_y', \n",
-    "        #'Y_FLUX_AUTO':     'f_video_y', \n",
-    "        #'Y_FLUXERR_AUTO':  'ferr_video_y',\n",
+    "        'Y_FLUX_APER_3':   'f_ap_video_y', \n",
+    "        'Y_FLUXERR_APER_3':'ferr_ap_video_y', \n",
+    "        'Y_FLUX_AUTO':     'f_video_y', \n",
+    "        'Y_FLUXERR_AUTO':  'ferr_video_y',\n",
     "        'J_MAG_APER_3':    'm_ap_video_j', \n",
     "        'J_MAGERR_APER_3': 'merr_ap_video_j', \n",
     "        'J_MAG_AUTO':      'm_video_j', \n",
     "        'J_MAGERR_AUTO':   'merr_video_j',\n",
-    "        #'J_FLUX_APER_3':   'f_ap_video_j', \n",
-    "        #'J_FLUXERR_APER_3':'ferr_ap_video_j', \n",
-    "        #'J_FLUX_AUTO':     'f_video_j', \n",
-    "        #'J_FLUXERR_AUTO':  'ferr_video_j',\n",
+    "        'J_FLUX_APER_3':   'f_ap_video_j', \n",
+    "        'J_FLUXERR_APER_3':'ferr_ap_video_j', \n",
+    "        'J_FLUX_AUTO':     'f_video_j', \n",
+    "        'J_FLUXERR_AUTO':  'ferr_video_j',\n",
     "        'H_MAG_APER_3':    'm_ap_video_h', \n",
     "        'H_MAGERR_APER_3': 'merr_ap_video_h', \n",
     "        'H_MAG_AUTO':      'm_video_h', \n",
     "        'H_MAGERR_AUTO':   'merr_video_h',\n",
-    "        #'H_FLUX_APER_3':   'f_ap_video_h', \n",
-    "        #'H_FLUXERR_APER_3':'ferr_ap_video_h', \n",
-    "        #'H_FLUX_AUTO':     'f_video_h', \n",
-    "        #'H_FLUXERR_AUTO':  'ferr_video_h',    \n",
+    "        'H_FLUX_APER_3':   'f_ap_video_h', \n",
+    "        'H_FLUXERR_APER_3':'ferr_ap_video_h', \n",
+    "        'H_FLUX_AUTO':     'f_video_h', \n",
+    "        'H_FLUXERR_AUTO':  'ferr_video_h',    \n",
     "        'K_MAG_APER_3':    'm_ap_video_k', \n",
     "        'K_MAGERR_APER_3': 'merr_ap_video_k', \n",
     "        'K_MAG_AUTO':      'm_video_k', \n",
     "        'K_MAGERR_AUTO':   'merr_video_k',\n",
-    "        #'K_FLUX_APER_3':   'f_ap_video_k', \n",
-    "        #'K_FLUXERR_APER_3':'ferr_ap_video_k', \n",
-    "        #'K_FLUX_AUTO':     'f_video_k', \n",
-    "        #'K_FLUXERR_AUTO':  'ferr_video_k'\n",
+    "        'K_FLUX_APER_3':   'f_ap_video_k', \n",
+    "        'K_FLUXERR_APER_3':'ferr_ap_video_k', \n",
+    "        'K_FLUX_AUTO':     'f_video_k', \n",
+    "        'K_FLUXERR_AUTO':  'ferr_video_k'\n",
     "})\n",
     "\n",
     "\n",
@@ -200,32 +200,6 @@
     "\n",
     "# Clean table metadata\n",
     "catalogue.meta = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# The fluxes are wrong so we recalcualte them from the magnitudes\n",
-    "for col in catalogue.colnames:\n",
-    "    if col.startswith('m_'):\n",
-    "        \n",
-    "        # Some 99.0 mags\n",
-    "        errcol = \"merr{}\".format(col[1:])\n",
-    "        mask = catalogue[col] > 90.\n",
-    "        catalogue[col][mask] = np.nan\n",
-    "        catalogue[errcol][mask] = np.nan\n",
-    "        \n",
-    "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
-    "\n",
-    "        # Fluxes are added in µJy\n",
-    "        catalogue.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
-    "        catalogue.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
-    "        \n"
    ]
   },
   {
@@ -282,6 +256,27 @@
     "    \n",
     "    # Adding the band-flag column\n",
     "    catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag_{}\".format(band)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# The fluxes are wrong so we recalcualte them from the magnitudes\n",
+    "for col in catalogue.colnames:\n",
+    "    if col.startswith('m_'):\n",
+    "        \n",
+    "        \n",
+    "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
+    "\n",
+    "        # Fluxes are added in µJy\n",
+    "        catalogue.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
+    "        catalogue.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
+    "        \n"
    ]
   },
   {
