--- a/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = ''\n",
+    "SUFFIX = '20171201'\n",
     "master_catalogue = Table.read(\"../../dmu32/dmu32_Lockman-SWIRE/data/Lockman-SWIRE_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
@@ -68,12 +68,12 @@
    },
    "outputs": [],
    "source": [
-    "good = {}\n",
-    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
-    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "# good = {}\n",
+    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
+    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -91,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -102,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -120,7 +120,8 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
+    "#best_catalogue = master_catalogue[combined_good].copy()\n",
+    "best_catalogue = master_catalogue.copy()"
    ]
   },
   {
@@ -165,12 +166,12 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [          \"OmegaCAM u\"]\n",
-    "g_bands = [\"GPC1 g\", \"OmegaCAM g\"]\n",
-    "r_bands = [\"GPC1 r\", \"OmegaCAM r\"]\n",
-    "i_bands = [\"GPC1 i\", \"OmegaCAM i\"]\n",
-    "z_bands = [\"VISTA z\", \"OmegaCAM z\", \"GPC1 z\",]\n",
-    "y_bands = [\"VISTA y\"  \"GPC1 y\", ]\n",
+    "u_bands = [\"megacam_u\", \"wfc_u\" ]\n",
+    "g_bands = [\"megacam_g\", \"wfc_g\", \"gpc1_g\"]\n",
+    "r_bands = [\"megacam_r\", \"wfc_r\", \"gpc1_r\"]\n",
+    "i_bands = [\"megacam_i\", \"wfc_i\", \"gpc1_i\"]\n",
+    "z_bands = [\"megacam_z\", \"wfc_z\", \"gpc1_z\"]\n",
+    "y_bands = [\"megacam_y\",          \"gpc1_y\"]\n",
     "\n",
     "def remove_unneeded_fluxes(list_of_bands):\n",
     "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
@@ -204,7 +205,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/Lockman-SWIRE_cigale_best_extcor_{}.fits\".format(SUFFIX))"
    ]
   },
   {
@@ -222,7 +223,8 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
+    "#best_catalogue = master_catalogue[combined_good].copy()\n",
+    "best_catalogue = master_catalogue.copy()"
    ]
   },
   {
@@ -233,8 +235,8 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
+    "best_catalogue.remove_column(\"redshift\")\n",
+    "best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
@@ -308,7 +310,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/Lockman-SWIRE_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX))"
    ]
   }
  ],
